Fix some datagen caching issues